	PR rtl-optimization/48496 	* src/ia64/ffi.c (ffi_call): Fix up aliasing violations.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@183301 138bc75d-0d04-0410-961f-82ee72b054a4